# ProjectZero

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  FRONTEND_SCAFFOLDING.md  INFRA_DEVEX_TICKETS.md  JIRA_SPARC_TICKETS.md  JIRA_TICKETS.md  README.md  SAAS_ARCHITECTURE.md  SAAS_SPECIFICATION.md  SPRINT_PLAN_CONFLUENCE.md  skills-lock.json
platform/backend/: .gitignore  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test.db
platform/backend/alembic/: env.py
platform/backend/alembic/versions/: faf14f9e809d_prj0_4_initial_schema_all_models.py
platform/backend/app/: main.py
platform/backend/app/core/: agent_resolver.py  auth_deps.py  config.py  database.py  middleware.py  security.py  stage_gates.py
platform/backend/app/models/: __init__.py  activity.py  agent.py  agent_execution.py  billing.py  brain.py  iso_audit.py  metrics.py  organization.py  product.py  story.py  user.py  workflow.py
platform/backend/app/schemas/: agent.py  auth.py  billing.py  cxo.py  organization.py  story.py  workflow.py
platform/backend/app/services/: activity_service.py  agent_dispatcher.py  agent_seeder.py  audit.py  auth_service.py  billing_service.py  brain_service.py  claude_mem_sync.py  confluence_client.py  git_service.py  integration_health.py  integration_service.py  iso_audit_service.py  iso_publisher.py  jira_client.py  jira_hierarchy_publisher.py  prd_agent.py  product_bootstrap.py  quality_gate.py  skill_registry.py  spec_parser.py  temporal_page_publisher.py  uml_diagram_publisher.py  workflow_service.py
platform/backend/app/temporal_integration/: activities.py  bootstrap_activities.py  bug_activities.py  bug_workflow.py  classifier_activity.py  client.py  epic_workflow.py  factory_activities.py  factory_workflow.py  mcra_activities.py  mcra_workflow.py  worker.py  (+7 more)
platform/backend/src/: tenancy.py
platform/backend/tests/: conftest.py  test_agents.py  test_auth.py  test_billing.py  test_billing_s4.py  test_brain.py  test_commands.py  test_dashboard.py  test_org_crud.py  test_products.py  test_tenant_isolation.py  test_uml_diagram_publisher.py
platform/temporal/: pyproject.toml
platform/temporal/activities/: core.py  worktree.py
platform/temporal/tests/: test_feature_workflow.py
platform/temporal/workers/: main.py
platform/temporal/workflows/: bug_fix.py  business_docs.py  deployment_readiness.py  feature_development.py  qa_validation.py  release_governance.py  vision_to_prd.py
(+631 files in other folders)
